DZ7/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz7-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/romanov($|/)(checkout)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz7-orders-service
                port:
                  number: 8080
          - path: /otusapp/romanov($|/)(confirmOrder)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rvm-dz7-orders-service
                port:
                  number: 8080
